--- a/paylikepayment/composer.json
+++ b/paylikepayment/composer.json
@@ -2,14 +2,14 @@
   "name": "esparks/module-paylike",
   "description": "Paylike integration with payment gateway prestashop",
   "type": "prestashop-module",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "license": [
       "GPL-3.0-or-later"
   ],
   "authors": [
     {
-      "name": "Michael Rotaru",
-      "email": "rotarumichael@gmail.com"
+      "name": "Ionut Calara",
+      "email": "ionut.calara@gmail.com"
     }
   ],
   "require": {
