Updated the authors

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Ionut Calara",
-      "email": "ionut.calara@gmail.com"
+      "name": "Cosmin Bosutar",
+      "email": "office@genuineq.com"
     }
   ],
   "prefer-stable": true,
