--- a/paylikepayment/composer.json
+++ b/paylikepayment/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "esparks/module-paylike",
+  "name": "paylike/module-paylike",
   "description": "Paylike integration with payment gateway prestashop",
   "type": "prestashop-module",
   "version": "1.0.6",
@@ -8,8 +8,8 @@
   ],
   "authors": [
     {
-      "name": "Ionut Calara",
-      "email": "ionut.calara@gmail.com"
+      "name": "Genuineq",
+      "email": "office@genuineq.com"
     }
   ],
   "require": {
